# sound-level-meter

./: .env  .gitignore  .nvim-conan.json  CMakeLists.txt  LICENSE  README.md  conanfile.py  filtergen.py  venv_setup.sh
.github/workflows/: linux.yml
conan/config/profiles/: esp-idf
src/: CMakeLists.txt
src/filtering/: CMakeLists.txt
src/filtering/BiquadDFII/: BiquadDFII.cpp  CMakeLists.txt
src/filtering/BiquadDFII/include/: BiquadDFII.h
src/filtering/FilterInterface/: CMakeLists.txt
src/filtering/FilterInterface/include/: FilterInterface.h
src/filtering/Weightings/: CMakeLists.txt
src/filtering/Weightings/A/: AWeighting.cpp  CMakeLists.txt
src/filtering/Weightings/A/include/: AWeighting.h
src/filtering/Weightings/C/: CMakeLists.txt  CWeighting.cpp
src/filtering/Weightings/C/include/: CWeighting.h
src/filtering/Weightings/Time/: CMakeLists.txt  TimeWeighting.cpp
src/filtering/Weightings/Time/include/: TimeWeighting.h
src/native_app/: CMakeLists.txt  main.cpp
src/slm/: CMakeLists.txt
src/slm/SoundLevelMeter/: CMakeLists.txt  SoundLevelMeter.cpp
src/slm/SoundLevelMeter/include/: SoundLevelMeter.h
tests/: conftest.py  pyproject.toml  setup.cfg
tests/modules/: __init__.py  utils.py
tests/modules/slm_reference/: cli_spec.yml  slm_reference.py
tests/src/: test_app_run.py
